# advent-of-code

./: .gitignore  Cargo.toml  day12-no-pruning.txt  day12-pruning.txt
src/: lib.rs  main.rs  string_functions.rs
src/day1/: mod.rs
src/day10/: area_map.rs  direction.rs  loop_map.rs  map.rs  mod.rs  tile.rs  tile_map.rs
src/day11/: expanded_universe.rs  image.rs  mod.rs  node.rs
src/day12/: challenge1.rs  mod.rs  record_row.rs  spring.rs
src/day2/: mod.rs
src/day3/: mod.rs  row_slice.rs  schema.rs  symbol.rs
src/day4/: game.rs  mod.rs  scratch_card.rs
src/day5/: mod.rs  type.rs  type_conversion.rs
src/day6/: mod.rs  race.rs
src/day7/: card.rs  hand.rs  mod.rs
src/day8/: direction.rs  mod.rs  node.rs  prime.rs  tracer.rs
src/day9/: mod.rs  sequence.rs
