[package]
name = "advent-of-code"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4.4.10"
phf = { version = "0.11.2", features = ["macros"] }
substring = "1.4.5"
lazy_static = "1.4.0"
bitvec = "1.0.1"
crossbeam = "0.8.3"
